feat: Release API 11
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ mixinConfigs=mixins.sponge.accessors.json,mixins.sponge.api.json,mixins.sponge.c
 superClassChanges=common.superclasschange
 
 minecraftVersion=1.20.6
-recommendedVersion=0-SNAPSHOT
+recommendedVersion=0
 
 org.gradle.dependency.verification.console=verbose
 org.gradle.jvmargs=-Xss4m
