--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ mixinConfigs=mixins.sponge.accessors.json,mixins.sponge.api.json,mixins.sponge.c
   mixins.sponge.tracker.json,mixins.sponge.ipforward.json,mixins.sponge.optimization.json
 superClassChanges=common.superclasschange
 
-minecraftVersion=24w40a
+minecraftVersion=1.21.2-pre1
 recommendedVersion=0-SNAPSHOT
 
 org.gradle.dependency.verification.console=verbose
