--- a/.github/workflows/common-run-build.yaml
+++ b/.github/workflows/common-run-build.yaml
@@ -12,6 +12,7 @@ jobs:
     if: "${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}"
     runs-on: ubuntu-22.04
     strategy:
+      fail-fast: false
       matrix:
         project:
           - vanilla
