chore: disable forge until 1.21.2 update is ready
SpongeVanilla and SpongeNeo should be available

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,13 +29,13 @@ jobs:
       matrix:
         project:
           - vanilla
-          - forge
+#          - forge
           - neoforge
         include:
           - project: vanilla
             gradleProject: SpongeVanilla
-          - project: forge
-            gradleProject: SpongeForge
+#          - project: forge
+#            gradleProject: SpongeForge
           - project: neoforge
             gradleProject: SpongeNeo
     steps:
