--- a/.github/workflows/common-run-build.yaml
+++ b/.github/workflows/common-run-build.yaml
@@ -58,13 +58,11 @@ jobs:
         if: "!startsWith(github.ref, 'refs/heads/update/') || matrix.project == 'vanilla'"
         uses: "actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3" # v4.3.1
         with:
-          name: Sponge Jars
+          name: Sponge ${{ matrix.project }} Jars
           path: |
             ${{ github.workspace }}/SpongeAPI/build/libs/*.jar
             ${{ github.workspace }}/build/libs/*.jar
-            ${{ github.workspace }}/vanilla/build/libs/*.jar
-            ${{ github.workspace }}/forge/build/libs/*.jar
-            ${{ github.workspace }}/neoforge/build/libs/*.jar
+            ${{ github.workspace }}/${{ matrix.project }}/build/libs/*.jar
       - name: ${{ matrix.gradleProject }} Production Jar
         if: "!startsWith(github.ref, 'refs/heads/update/') || matrix.project == 'vanilla'"
         uses: "actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3" # v4.3.1
